--- a/LayerDb/App.Config
+++ b/LayerDb/App.Config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <connectionStrings>
-    <add name="DbModelStr" connectionString="data source=.\G3;initial catalog=ArticlesManager;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DbModelStr" connectionString="data source=.\G3;initial catalog=ArticlesManager;user id=sa;password=pak123lahore;multipleactiveresultsets=True;application name=EntityFramework" providerName="System.Data.SqlClient" />
   </connectionStrings>
 </configuration>
