--- a/Website/Web.config
+++ b/Website/Web.config
@@ -7,7 +7,7 @@
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-  </configSections>
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
     <add name="DbModelStr" connectionString="data source=.\G3;initial catalog=ArticlesManager;user id=sa;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="data source=.\G3;initial catalog=ArticlesManager;user id=sa;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
