--- a/Website/Website.csproj
+++ b/Website/Website.csproj
@@ -45,6 +45,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -112,12 +120,6 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="EntityFramework">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
-    </Reference>
-    <Reference Include="EntityFramework.SqlServer">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.AspNet.Identity.Core">
       <HintPath>..\packages\Microsoft.AspNet.Identity.Core.2.2.2\lib\net45\Microsoft.AspNet.Identity.Core.dll</HintPath>
     </Reference>
@@ -168,6 +170,12 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\Articles\ArticleBlocksCommentsController.cs" />
+    <Compile Include="Controllers\Articles\ArticleBlocksController.cs" />
+    <Compile Include="Controllers\Articles\ArticleReviewsController.cs" />
+    <Compile Include="Controllers\Articles\ArticlesController.cs" />
+    <Compile Include="Controllers\Crud\BlockTypesController.cs" />
+    <Compile Include="Controllers\Crud\TagsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Controllers\RolesAdminController.cs" />
@@ -176,6 +184,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Constants.cs" />
     <Compile Include="Models\RoleViewModel.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -249,10 +258,40 @@
     <Content Include="Views\UsersAdmin\Edit.cshtml" />
     <Content Include="Views\UsersAdmin\Index.cshtml" />
     <Content Include="Views\UsersAdmin\LatestIndex.cshtml" />
+    <Content Include="Views\Tags\Create.cshtml" />
+    <Content Include="Views\Tags\Delete.cshtml" />
+    <Content Include="Views\Tags\Details.cshtml" />
+    <Content Include="Views\Tags\Edit.cshtml" />
+    <Content Include="Views\Tags\Index.cshtml" />
+    <Content Include="Views\BlockTypes\Create.cshtml" />
+    <Content Include="Views\BlockTypes\Delete.cshtml" />
+    <Content Include="Views\BlockTypes\Details.cshtml" />
+    <Content Include="Views\BlockTypes\Edit.cshtml" />
+    <Content Include="Views\BlockTypes\Index.cshtml" />
+    <Content Include="Views\Articles\Create.cshtml" />
+    <Content Include="Views\Articles\Delete.cshtml" />
+    <Content Include="Views\Articles\Details.cshtml" />
+    <Content Include="Views\Articles\Edit.cshtml" />
+    <Content Include="Views\Articles\Index.cshtml" />
+    <Content Include="Views\ArticleBlocks\Create.cshtml" />
+    <Content Include="Views\ArticleBlocks\Delete.cshtml" />
+    <Content Include="Views\ArticleBlocks\Details.cshtml" />
+    <Content Include="Views\ArticleBlocks\Edit.cshtml" />
+    <Content Include="Views\ArticleBlocks\Index.cshtml" />
+    <Content Include="Views\ArticleReviews\Create.cshtml" />
+    <Content Include="Views\ArticleReviews\Delete.cshtml" />
+    <Content Include="Views\ArticleReviews\Details.cshtml" />
+    <Content Include="Views\ArticleReviews\Edit.cshtml" />
+    <Content Include="Views\ArticleReviews\Index.cshtml" />
+    <Content Include="Views\ArticleBlocksComments\Create.cshtml" />
+    <Content Include="Views\ArticleBlocksComments\Delete.cshtml" />
+    <Content Include="Views\ArticleBlocksComments\Details.cshtml" />
+    <Content Include="Views\ArticleBlocksComments\Edit.cshtml" />
+    <Content Include="Views\ArticleBlocksComments\Index.cshtml" />
+    <Content Include="Views\Articles\_SingleArticle.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Controllers\Crud\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
