--- a/LayerDb/LayerDb.csproj
+++ b/LayerDb/LayerDb.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Models\ArticleBlocksComment.cs" />
     <Compile Include="Models\ArticleReview.cs" />
     <Compile Include="Models\ArticleTag.cs" />
+    <Compile Include="Models\ArticleView.cs" />
     <Compile Include="Models\AspNetRole.cs" />
     <Compile Include="Models\AspNetUser.cs" />
     <Compile Include="Models\AspNetUserClaim.cs" />
@@ -70,7 +71,9 @@
     <Compile Include="Models\BlockType.cs" />
     <Compile Include="Models\C__MigrationHistory2.cs" />
     <Compile Include="Models\DbModel.cs" />
+    <Compile Include="Models\SiteMeta.cs" />
     <Compile Include="Models\Tag.cs" />
+    <Compile Include="Models\UserTag.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryExecutor.cs" />
     <Compile Include="TemplateClass.cs" />
