--- a/LayerBao/LayerBao.csproj
+++ b/LayerBao/LayerBao.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ArticleManagement.cs" />
     <Compile Include="ArticlesBao.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SiteMetaBao.cs" />
     <Compile Include="UserBao.cs" />
   </ItemGroup>
   <ItemGroup>
