--- a/LayerDb/LayerDb.csproj
+++ b/LayerDb/LayerDb.csproj
@@ -32,10 +32,12 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
-      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
@@ -61,6 +63,7 @@
     <Compile Include="Models\Article.cs" />
     <Compile Include="Models\ArticleBlock.cs" />
     <Compile Include="Models\ArticleBlocksComment.cs" />
+    <Compile Include="Models\ArticleManagerView.cs" />
     <Compile Include="Models\ArticleReview.cs" />
     <Compile Include="Models\ArticleTag.cs" />
     <Compile Include="Models\ArticleView.cs" />
