--- a/Website/Web.config
+++ b/Website/Web.config
@@ -10,8 +10,12 @@
     
   <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --><!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
   <connectionStrings>
-    <add name="DbModelStr" connectionString="data source=DESKTOP-K6J9TKH;initial catalog=ArticlesManager;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="DefaultConnection" connectionString="data source=DESKTOP-K6J9TKH;initial catalog=ArticlesManager;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="DbModelStr" connectionString="data source=DESKTOP-K6J9TKH;initial catalog=ArticlesManager;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=DESKTOP-K6J9TKH;initial catalog=ArticlesManager;user id=sa;password=123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
+
+    <add name="DbModelStr" connectionString="data source=.\G3;initial catalog=ArticlesManager;user id=sa;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="data source=.\G3;initial catalog=ArticlesManager;user id=sa;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+
     <!--<add name="DbModelStr" connectionString="data source=198.71.225.146;initial catalog=zeroedge;user id=hassan;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="DefaultConnection" connectionString="data source=198.71.225.146;initial catalog=zeroedge;user id=hassan;password=pak123lahore;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Website-20190811031653.mdf;Initial Catalog=aspnet-Website-20190811031653;Integrated Security=True"
